# danikk_space_engine

./: .cproject  .gitignore  .project  LICENSE  README.md  meson.build
data/fonts/: archive.rfmd
data/shaders/: base2d.frag  base2d.vert  base3d.frag  base3d.vert
include/: asset.h  chunk.h  default.h  gui.h  keybind.h  localization.h  manager.h  material.h  mode_container.h  object.h  template.h
include/block/: allocator.h  atlas.h  block.h  border.h  container.h  context.h  data.h  fill.h  form.h  gen.h  iterator.h  material.h  pos.h  structure.h  structure_gen.h  tag.h  type.h
include/collider/: collider.h  cube.h
include/component/: asteroid.h  ball_collider.h  camera.h  component.h  mesh_draw.h  voxel_map.h  world_object.h
include/controller/: controller.h  player.h
include/object/: DELETED_SCOPE.h  block_map.h  camera.h  desription.txt  kinetic.h  limited_live.h  map.h  meshed.h  object.h  particle.h  physic.h  player.h  point_collider.h  projectile.h  tag_table.h  timed.h  world.h
include/object_preset/: container.h
include/objects/: map.h  meshed.h  object.h
include/preset/: container.h
scripts/: apt_install_deps.sh  compile.sh
source/: .cproject  .project  asset.cpp  component.cpp  component_id.cpp  gui.cpp  keybind.cpp  localization.cpp  main.cpp  manager.cpp  material.cpp  meson.build
source/block/: .cproject  .project  allocator.cpp  atlas.cpp  block.cpp  border.cpp  container.cpp  fill.cpp  gen.cpp  material.cpp  meson.build  pos.cpp  type.cpp
source/collider/: .cproject  .project  (+2 more)
subprojects/: danikk_engine  danikk_framework
(+37 files in other folders)
